2017-10-23  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix crash when trying to create new debt payment without any debt (possible fix for issue #33)
	* Do not allow zero value for new loan

2017-10-18  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix account value when joining transactions with different accounts

2017-10-16  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add close account menu item and add extra warning text in delete account dialog (related to issue #32)

2017-10-11  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* List income/expense categories for shares bough/sold in addition to accounts
	* Manual completed

2017-10-10  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Check for new versions

2017-10-09  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Exchange rates from mycurrency.net (more than 100 additional currencies)

2017-10-08  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Eqonomize! file import alternatives for duplicates handling
	* Fix assets and liabilities line chart months
	* Set black text color for line chart hover box
	* Set currency in budget edit field to main currency
	* Use parent category of subcategory as default parent when creating new account from context menu

2017-10-05  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix crash when account with associated transactions is remove

2017-10-04  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not allow negative debt value in new loan dialog

2017-09-04  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix new currency does not appear in the currency converter after application reopened (part of issue #27)
	* Fix new currency dialog reopens when creating new currency from set main currency dialog

2017-07-21  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support for parentheses for calculation in input fields

2017-07-20  Hanna Knutsson <hanna.knutsson@protonmail.com>
