@@ -1,3 +1,7 @@
+2017-10-24  Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix "All Incomes, without subcategories" in categories comparison chart
+
 2017-10-23  Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Fix crash when trying to create new debt payment without any debt (possible fix for issue #33)
